# dada-holo

./: README.md  default.nix  dev-setup.md
ui/src/elements/: hod-calendar-event.ts
ui/test/mocks/: setupApolloClient.js
zome/: Cargo.toml  README.md  run_build.sh
zome/tests/: package-lock.json
zome/tests/src/: index.ts
zome/workdir/dna/: dna.yaml
zome/zomes/dada_conversation/: Cargo.toml
zome/zomes/dada_conversation/src/: conversation.rs  conversation_drawing.rs  lib.rs  types.rs  utils.rs
zome/zomes/file_storage/: Cargo.toml  package-lock.json  package.json
